# data-process

./: .env  .env.mysql  .env.postgres  .env.prod  .gitignore  Cargo.toml  README.md  build.rs
build-tools/: build-linux-x86.sh  (+2 more)
crates/process_core/: Cargo.toml
crates/process_core/src/: db.rs  http.rs  json.rs  lib.rs  process.rs
crates/process_core/tests/: db_test.rs  http_test.rs  json2_test.rs  json_test.rs
crates/process_jdbc/: Cargo.toml  README.md
crates/process_jdbc/src/: common.rs  kingbase.rs  lib.rs  macros.rs  main.rs  mssql.rs  oracle.rs
crates/process_web/: .env  Cargo.toml
crates/process_web/migration/: Cargo.toml
crates/process_web/migration/src/: lib.rs  m20240118_000001_create_collect_config_table.rs  m20240118_000001_create_collect_log_table.rs  m20240118_000001_create_sync_log_table.rs  m20240119_000001_create_collect_config_table.rs  m20240119_000002_create_collect_log_table.rs  m20240119_023953_create_sync_config_table.rs  m20240119_030002_create_sync_log_table.rs  m20240125_000001_alert_collect_config_table.rs  m20240125_000001_alert_collect_log_table.rs  m20240125_000001_alert_sync_config_table.rs  m20240129_000001_alert_collect_config_table.rs  m20240226_015923_create_data_source_list.rs  m20240226_015923_create_datasource_list.rs  m20240227_022320_create_data_sharing_config_table.rs  m20240304_063328_create_sharing_request_log.rs  m20240319_061549_update_data_sharing_config_table.rs  m20240327_063820_update_sharing_request_log.rs  m20240402_033637_update_collect_config_table.rs  m20240408_033448_update_collect_log_table.rs
crates/process_web/src/: data_source.rs  lib.rs  main.rs  utils.rs
crates/process_web/src/api/: auth.rs  collect_config.rs  collect_log.rs  common.rs  data_sharing_config.rs  data_source_list.rs  datasource_list.rs  macros.rs  mock.rs  mod.rs  sharing_request_log.rs  statistics.rs  sync_config.rs  sync_log.rs
crates/process_web/src/entity/: collect_config.rs  collect_log.rs  data_sharing_config.rs  data_source_list.rs  datasource_list.rs  mod.rs  prelude.rs  sharing_request_log.rs  sync_config.rs  sync_log.rs
crates/process_web/src/macros/: response.rs
crates/process_web/src/service/: collect_config_service.rs  collect_log_service.rs  data_sharing_config_service.rs  data_source_list_service.rs  datasource_list_service.rs  log_service.rs  mod.rs  sharing_request_log_service.rs  sync_config_service.rs  sync_log_service.rs  table_service.rs
crates/process_web/ui/: .env.development  .env.production  .gitignore  next.config.js  package-lock.json  package.json  pnpm-lock.yaml
crates/process_web/ui/api/: collect_config.ts  collect_log.ts  common.ts  data_sharing_config.ts  data_source_list.ts  datasource_list.ts  sharing_request_log.ts  statistics.ts  sync_config.ts  sync_log.ts
crates/process_web/ui/api/models/: CollectConfig.ts  CollectConfigListParams.ts  CollectLog.ts  CollectLogListParams.ts  CollectTaskInfo.ts  CollectTaskInfoDayListReq.ts  CollectTaskInfoRes.ts  DataSharingConfig.ts  DataSharingConfigListParams.ts  DataSharingConfigParams.ts  DataSourceList.ts  DataSourceListParams.ts  DatasourceList.ts  DatasourceListParams.ts  NumItems.ts  QueryTableColumnsParameters.ts  SharingRequestLog.ts  SharingRequestLogParams.ts  SharingTaskInfoReq.ts  SharingTaskInfoRes.ts  SyncConfig.ts  SyncConfigListParams.ts  SyncLog.ts  SyncLogListParams.ts  SyncTaskInfoReq.ts  SyncTaskInfoRes.ts  SystemInfo.ts  TaskInfo.ts
crates/process_web/ui/api/models/auto-generates/: CollectConfig.ts  CollectLog.ts  SyncConfig.ts
crates/process_web/ui/app/: layout.tsx
crates/process_web/ui/app/docs/: page.mdx
crates/process_web/ui/app/manage/: layout.tsx  page.tsx
crates/process_web/ui/app/manage/(log)/collection-log/: page.tsx
crates/process_web/ui/app/manage/(log)/collection-log/components/: content-table.tsx  drawer-info.tsx  header-form.tsx
crates/process_web/ui/app/manage/(log)/sharing-request-log/: page.tsx
crates/process_web/ui/app/manage/(log)/sharing-request-log/components/: content-table.tsx  drawer-info.tsx  header-form.tsx
crates/process_web/ui/app/manage/collection-log/components/: content-table.tsx  drawer-info.tsx  header-form.tsx
crates/process_web/ui/app/manage/collection-setting/: page.tsx
crates/process_web/ui/app/manage/collection-setting/components/: content-table.tsx  edit-form.tsx  header-form.tsx
crates/process_web/ui/app/manage/components/: cron-edit.tsx  form-item-label-tips.tsx  label-tips.tsx  main-breadcrumb.tsx  main-content.tsx  main-header.tsx  main-layout.tsx  main-sider.tsx  main-slider.tsx  main.module.scss  table-container.module.scss  table-container.tsx
crates/process_web/ui/app/manage/data-sharing-config/: page.tsx
crates/process_web/ui/app/manage/data-sharing-config/components/: content-table.tsx  edit-form.tsx  header-form.tsx
crates/process_web/ui/app/manage/data-source-list/: page.tsx
crates/process_web/ui/app/manage/data-source-list/components/: content-table.tsx  edit-form.tsx  header-form.tsx
crates/process_web/ui/app/manage/log/: page.tsx
crates/process_web/ui/app/manage/statistics/: page.module.scss  page.tsx
crates/process_web/ui/app/manage/statistics/components/: collect-task-card.tsx  main-stat.tsx  overview-card.tsx  overview.module.scss  section-five-stat.tsx  section-four-stat.tsx  section-one-stat.tsx  section-three-stat.tsx  section-two-stat.tsx  sharing-info-card.tsx  sharing-task-card.tsx  sync-task-card.tsx  system-info-card.module.scss  system-info-card.tsx  system-task-card.tsx  task-info-card.tsx
crates/process_web/ui/app/manage/sync-log/: page.tsx
crates/process_web/ui/app/manage/sync-setting/: page.tsx
crates/process_web/ui/app/manage/sync-setting/components/: content-table.tsx  edit-form.tsx  header-form.tsx
crates/process_web/ui/contexts/: collectCofnigContext.ts  collectLogContext.ts  dataSharingConfigContext.ts  dataSourceListContext.ts  main.tsx  sharingRequestLog.ts  syncCofnigContext.ts  syncLogContext.ts
crates/process_web/ui/lib/: encrypt.ts  getConfig.ts
crates/process_web/ui/public/: config.json  remote-auth.js
(+17 files in other folders)
