[package]
name = "data_process_center"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
anyhow = "1.0.75"
async-trait = "0.1.74"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.193"
serde_json = "1.0.108"
tracing = "0.1"
tracing-subscriber = "0.3.0"

[workspace]
members = [
  "crates/*"
]

[[example]]
name = "josn"
path = "examples/json.rs"