[package]
name = "data_process"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
tracing = "0.1"
dotenvy = "0.15.7"

process_web = { path = "crates/process_web" }

[workspace]
members = [
  "crates/*"
]

[profile.release]
opt-level = 3
