[package]
name = "process_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
anyhow = "1.0.75"
async-trait = "0.1.74"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tracing = "0.1"
tracing-subscriber = "0.3.0"
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "debug-print"] }
tokio = "1.35.1"

process_jdbc = { path = "../process_jdbc"}

[target.x86_64-unknown-linux-musl.dependencies]
#openssl依赖用于解决交叉编译reqwest库时遇到的错误
openssl = { version = "0.10", features = ["vendored"] }