[package]
name = "process_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print" ] }
anyhow = "1.0.75"
dotenvy = "0.15.7"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.0"
axum = { version = "0.7.4", features = ["macros"] }
serde = { version = "1.0.193", features = ["derive"] }
aide = { version = "0.13.1", features = ["axum"] }
schemars = { version = "0.8.10", features = ["uuid1"] }
axum-swagger-ui = "0.3.0"

migration = { path = "migration" }
process_core = { path = "../process_core" }
