[package]
name = "process_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "debug-print"] }
anyhow = "1.0.75"
dotenvy = "0.15.7"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.0"
tracing-appender = "0.2"
axum = { version = "0.7.4", features = ["macros"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
schemars = { version = "0.8.10", features = ["uuid1"] }
axum-swagger-ui = "0.3.0"
ts-rs = { version = "7.1", features = ["uuid", "uuid-impl"] }
chrono = "0.4.31"
math-parse = "1.0.2"

migration = { path = "migration" }
process_core = { path = "../process_core" }

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]